--- a/第一个/1/Love.html
+++ b/第一个/1/Love.html
@@ -41,11 +41,11 @@
                         <span class="say">都是我们一辈子最美的回忆。</span><br>
                          <span class="say">我愿意爱你直到老去！</span><br>
                    <br>
-                    <span class="say"><span class="space"></span> -- Yours, wuxia2001.</span>
+                    <span class="say"><span class="space"></span> -- Yours, 龙猫.</span>
                     </div>
                 </div>
                 <div id="clock-box">
-                    <a href="http://blog.csdn.net/wuxia2001" target="_blank">@wuxia2001</a> 与 <a href="http://blog.csdn.net/wuxia2001" target="_blank">@月亮女</a> 在一起的
+                    <a href="http://blog.csdn.net/龙猫" target="_blank">@龙猫</a> 与 <a href="http://blog.csdn.net/龙猫" target="_blank">@小婷宝贝</a> 在一起的
                         <div id="clock"></div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
