--- a/第二个/1/index.html
+++ b/第二个/1/index.html
@@ -43,18 +43,17 @@
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
-					<div id="messages">
-						月,我爱你！
+					<div id="messages">我爱你！
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- wuxia2001</div>
+						<div class="signature"></div>
 					</div>
 				</div>
 			</div>
 		</div>
-	
+
 	</div>
 	<script type="text/javascript">
 		var offsetX = $("#loveHeart").width() / 2;
@@ -65,11 +64,11 @@
 		together.setMinutes(0);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
-		
+
 		if (!document.createElement('canvas').getContext) {
 			var msg = document.createElement("div");
 			msg.id = "errorMsg";
-			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+"; 
+			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
 			document.body.appendChild(msg);
 			$("#code").css("display", "none")
 			$("#copyright").css("position", "absolute");
